# django-memoized-prefetch

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: build.yml  ci.yml
django_memoized_prefetch/: __init__.py  _config.py  _dotted_getattr.py  _prefetch.py
tests/: .gitignore  README.md  manage.py  test_memoized_prefetch.py  test_readme.py
tests/test_project/: settings.py  urls.py  wsgi.py
tests/test_project/bookshop/: factories.py  models.py
tests/test_project/bookshop/migrations/: 0001_initial.py
tests/test_project/test_app/: apps.py  factories.py  models.py
tests/test_project/test_app/migrations/: 0001_initial.py
